--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,6 +43,13 @@ http {
             proxy_set_header    Connection            $connection_upgrade;
         }
 
+        location /ws {
+            proxy_pass          http://$app;
+            proxy_http_version  1.1;
+            proxy_set_header    Upgrade               $http_upgrade;
+            proxy_set_header    Connection            $connection_upgrade;
+        }
+
         location / {
             proxy_set_header    Host                  $host;
             proxy_set_header    X-Forwarded-For       $remote_addr;
